--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,10 @@ local.properties
 *.tar.gz
 *.rar
 
+# .env
+.env
+.env.production
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
