--- a/people-collection-service/build.gradle
+++ b/people-collection-service/build.gradle
@@ -5,7 +5,14 @@ plugins {
 
 group = 'ru.ifmo.soa'
 version = '0.1.0-SNAPSHOT'
-sourceCompatibility = '11'
+
+sourceCompatibility = '17'
+targetCompatibility = '17'
+
+tasks.withType(JavaCompile) {
+  options.encoding = 'UTF-8'
+  options.compilerArgs += ['--release', '17']
+}
 
 repositories {
     mavenCentral()
@@ -35,6 +42,6 @@ test {
     useJUnitPlatform()
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+war {
+  archiveFileName = 'people-collection-service.war'
 }
