--- a/demography-service/build.gradle
+++ b/demography-service/build.gradle
@@ -24,9 +24,10 @@ dependencies {
   compileOnly 'jakarta.platform:jakarta.jakartaee-api:10.0.0'
   compileOnly 'jakarta.ws.rs:jakarta.ws.rs-api:4.0.0'
 
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
+  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.0'
   implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
   implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
 }
 
 war {
