--- a/people-collection-service/.env.example
+++ b/people-collection-service/.env.example
@@ -3,3 +3,7 @@ POSTGRES_DB=soa3
 POSTGRES_USER=sXXXXXX
 POSTGRES_PASSWORD=password
 POSTGRES_PORT=5432
+
+# Consul Configuration
+CONSUL_HOST=localhost
+CONSUL_PORT=8500
