feat(people-service): :sparkles: register service in eureka

--- a/people-collection-service/.env.example
+++ b/people-collection-service/.env.example
@@ -7,3 +7,7 @@ POSTGRES_PORT=5432
 # Consul Configuration
 CONSUL_HOST=localhost
 CONSUL_PORT=8500
+CONSUL_DNS_PORT=8600
+
+# Eureka Configuration
+EUREKA_URL=http://localhost:8761/eureka/v2
