--- a/demography-service/.env.example
+++ b/demography-service/.env.example
@@ -3,3 +3,11 @@ HTTP_CLIENT_CONNECT_TIMEOUT=5
 HTTP_CLIENT_RESPONSE_TIMEOUT=10
 HTTP_CLIENT_MAX_TOTAL=10
 HTTP_CLIENT_MAX_PER_ROUTE=5
+
+# Consul Configuration
+CONSUL_HOST=localhost
+CONSUL_PORT=8500
+CONSUL_DNS_PORT=8600
+
+# Eureka Configuration
+EUREKA_URL=http://localhost:8761/eureka/
