--- a/demography-service/build.gradle
+++ b/demography-service/build.gradle
@@ -21,11 +21,24 @@ repositories {
   mavenCentral()
 }
 
+ext {
+  springCloudVersion = "2023.0.0"
+}
+
+dependencyManagement {
+  imports {
+    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+  }
+}
+
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
   implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.0'
+
+  implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+  implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
 }
 
 bootRun {
