--- a/demography-service/.env.example
+++ b/demography-service/.env.example
@@ -1,4 +1,3 @@
-PEOPLE_SERVICE_URL=https://localhost:51313/api/v1
 HTTP_CLIENT_CONNECT_TIMEOUT=5
 HTTP_CLIENT_RESPONSE_TIMEOUT=10
 HTTP_CLIENT_MAX_TOTAL=10
@@ -11,3 +10,7 @@ CONSUL_DNS_PORT=8600
 
 # Eureka Configuration
 EUREKA_URL=http://localhost:8761/eureka/
+
+# Service
+SERVICE_PORT=8081
+SERVICE_HOST=172.17.0.1
