--- a/spring-cloud/settings.gradle
+++ b/spring-cloud/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'spring-cloud'
 include 'eureka-server'
 include 'config-server'
 include 'api-gateway'
+include 'ewma-loadbalancer'
