--- a/spring-cloud/ewma-loadbalancer/build.gradle
+++ b/spring-cloud/ewma-loadbalancer/build.gradle
@@ -14,14 +14,27 @@ repositories {
 
 ext {
   springCloudVersion = "2023.0.0"
+  jacksonVersion = "2.16.1"
 }
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
+  implementation 'org.springframework.boot:spring-boot-actuator-autoconfigure'
+  implementation 'org.springframework.boot:spring-boot-starter-validation'
+  implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+  implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+  implementation 'org.springframework.cloud:spring-cloud-commons:4.1.1'
+
+  implementation 'io.micrometer:micrometer-core'
+  implementation 'io.micrometer:micrometer-registry-prometheus'
 
   implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
+  implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+  implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
+  implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
+  implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
 }
 
 dependencyManagement {
